Adjusted header to use sticky positioning and increased top margin for all pages to prevent content overlap.

--- a/src/NammaTeaKada/Home.css
+++ b/src/NammaTeaKada/Home.css
@@ -37,8 +37,8 @@ main{
 
 .home-title{
   color: hsl(38, 100%, 50%);
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: -600px;
+  /* margin-right: auto; */
   margin-top: 100px;
   font-size: 5rem;
   text-shadow: 2px 2px 4px hsl(38, 100%, 50%);
@@ -53,13 +53,14 @@ main{
   }
   .home-title {
     font-size: 2.5rem;
-    margin: 0 auto;
+    margin-top: 50px auto;
   }
   .home-para {
     font-size: 1.1rem;
     margin-left: 0;
     text-align: center;
     padding: 0 1rem;
+    font-size: smaller
   }
   .cta-buttons {
     margin: 0 auto;
